tests/fail/unexpected_string.llcl
/*
error: unexpected type
9  |fn main(): Int8 {
10 |    return "";
               ^^ expected type 'Int8' but got a string
11 |}
*/

fn main(): Int8 {
	return "";
}